[package]
name = "algorithm"
version = "0.1.2"
edition = "2021"
authors = ["tickbh <tickdream125@hotmail.com>"]
description = "about algorithm data structure, now has lru/lru-k/lfu/slab/rbtree, 关于算法常用的数据结构"
repository = "https://github.com/tickbh/algorithm"
license = "Apache-2.0"
keywords = ["algorithm", "lru", "lfu", "lru-k", "slab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1.4.0"

[dev-dependencies]
rand="0.8.5"
libc="0.2"
slab = "0.4.9"

[profile.release]
opt-level = 3