[package]
name = "algorithm-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.36"
lazy_static = "1.2.0"
proc-macro2 = "1.0.86"

[dependencies.syn]
version = "2.0.74"
features = ["full", "extra-traits"]

[lib]
proc-macro = true
