[package]
name = "algorithm-macro"
version = "0.1.0"
edition = "2021"
authors = ["tickbh <tickdream125@hotmail.com>"]
description = "about algorithm data structure, now has ttl with lru/lru-k/lfu/arc and slab/rbtree/roaring_bitmap/timer_wheelss, 关于算法常用的数据结构"
repository = "https://github.com/tickbh/algorithm-rs"
license = "Apache-2.0"
keywords = ["arc", "lru", "lfu", "timerwheel", "slab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.36"
lazy_static = "1.2.0"
proc-macro2 = "1.0.86"

[dependencies.syn]
version = "2.0.74"
features = ["full", "extra-traits"]

[lib]
proc-macro = true
